--- a/index.html
+++ b/index.html
@@ -111,163 +111,6 @@
         </div>
       </section>
 
-      <!-- <section class="team-main">
-        <div class="container">
-          <h2 class="team-title">Our Team</h2>
-          <ul class="team-list">
-            <li class="team-item">
-              <img src="./images/img-1.jpg" alt="Mark Guerrero" width="264" />
-              <div class="team-div">
-                <h3 class="team-item-title">Mark Guerrero</h3>
-                <p class="team-item-text">Product Designer</p>
-                <ul class="icons-team">
-                  <li class="team-icon-item">
-                    <a href="" class="team-icon-link">
-                      <svg class="icon-web" width="16" height="16">
-                        <use href="./images/icons.svg#icon-instagram"></use>
-                      </svg>
-                    </a>
-                  </li>
-                  <li class="team-icon-item">
-                    <a href="" class="team-icon-link">
-                    <svg class="icon-web" width="16" height="16">
-                      <use href="./images/icons.svg#icon-twitter"></use>
-                    </svg>
-                  </a>
-                  </li>
-                  <li class="team-icon-item">
-                    <a href="" class="team-icon-link">
-                    <svg class="icon-web" width="16" height="16">
-                      <use href="./images/icons.svg#icon-facebook"></use>
-                    </svg>
-                  </a>
-                  </li>
-                  <li class="team-icon-item">
-                    <a href="" class="team-icon-link">
-                    <svg class="icon-web" width="16" height="16">
-                      <use href="./images/icons.svg#icon-linkedin"></use>
-                    </svg>
-                  </a>
-                  </li>
-                </ul>
-              </div>
-            </li>
-            <li class="team-item">
-              <img src="./images/img-2.jpg" alt="Tom Ford" width="264" />
-              <div class="team-div">
-                <h3 class="team-item-title">Tom Ford</h3>
-                <p class="team-item-text">Frontend Developer</p>
-                 <ul class="icons-team">
-                  <li class="team-icon-item">
-                    <a href="" class="team-icon-link">
-                      <svg class="icon-web" width="16" height="16">
-                        <use href="./images/icons.svg#icon-instagram"></use>
-                      </svg>
-                    </a>
-                  </li>
-                  <li class="team-icon-item">
-                    <a href="" class="team-icon-link">
-                    <svg class="icon-web" width="16" height="16">
-                      <use href="./images/icons.svg#icon-twitter"></use>
-                    </svg>
-                  </a>
-                  </li>
-                  <li class="team-icon-item">
-                    <a href="" class="team-icon-link">
-                    <svg class="icon-web" width="16" height="16">
-                      <use href="./images/icons.svg#icon-facebook"></use>
-                    </svg>
-                  </a>
-                  </li>
-                  <li class="team-icon-item">
-                    <a href="" class="team-icon-link">
-                    <svg class="icon-web" width="16" height="16">
-                    <use href="./images/icons.svg#icon-linkedin">
-                    </use>
-                    </svg>
-                  </a>
-                  </li>
-                </ul>
-              </li>
-              </div
-            <li class="team-item">
-              <img src="./images/img-3.jpg" alt="Camila Garcia" width="264" />
-              <div class="team-div">
-                <h3 class="team-item-title">Camila Garcia</h3>
-                <p class="team-item-text">Marketing</p>
-                <ul class="icons-team">
-                  <li class="team-icon-item">
-                    <a href="" class="team-icon-link">
-                      <svg class="icon-web" width="16" height="16">
-                        <use href="./images/icons.svg#icon-instagram"></use>
-                      </svg>
-                    </a>
-                  </li>
-                  <li class="team-icon-item">
-                    <a href="" class="team-icon-link">
-                    <svg class="icon-web" width="16" height="16">
-                      <use href="./images/icons.svg#icon-twitter"></use>
-                    </svg>
-                  </a>
-                  </li>
-                  <li class="team-icon-item">
-                    <a href="" class="team-icon-link">
-                    <svg class="icon-web" width="16" height="16">
-                      <use href="./images/icons.svg#icon-facebook"></use>
-                    </svg>
-                  </a>
-                  </li>
-                  <li class="team-icon-item">
-                    <a href="" class="team-icon-link">
-                    <svg class="icon-web" width="16" height="16">
-                      <use href="./images/icons.svg#icon-linkedin"></use>
-                    </svg>
-                  </a>
-                  </li>
-                </ul>
-              </div>
-            </li>
-            <li class="team-item">
-              <img src="./images/img-4.jpg" alt="Daniel Wilson" width="264" />
-              <div class="team-div">
-                <h3 class="team-item-title">Daniel Wilson</h3>
-                <p class="team-item-text">UI Designer</p>
-                <ul class="icons-team">
-                  <li class="team-icon-item">
-                    <a href="" class="team-icon-link">
-                      <svg class="icon-web" width="16" height="16">
-                        <use href="./images/icons.svg#icon-instagram"></use>
-                      </svg>
-                    </a>
-                  </li>
-                  <li class="team-icon-item">
-                    <a href="" class="team-icon-link">
-                    <svg class="icon-web" width="16" height="16">
-                      <use href="./images/icons.svg#icon-twitter"></use>
-                    </svg>
-                  </a>
-                  </li>
-                  <li class="team-icon-item">
-                    <a href="" class="team-icon-link">
-                    <svg class="icon-web" width="16" height="16">
-                      <use href="./images/icons.svg#icon-facebook"></use>
-                    </svg>
-                  </a>
-                  </li>
-                  <li class="team-icon-item">
-                    <a href="" class="team-icon-link">
-                    <svg class="icon-web" width="16" height="16">
-                      <use href="./images/icons.svg#icon-linkedin"></use>
-                    </svg>
-                  </a>
-                  </li>
-                </ul>
-              </div>
-            </li>
-          </ul>
-        </div>
-      </section> -->
-
       <section class="team-main">
         <div class="container">
           <h2 class="team-title">Our Team</h2>
@@ -594,7 +437,64 @@
             </li>
           </ul>
         </div>
+        <div class="footer-subscribe">
+          <p class="footer-subscribe-text">Subscribe</p>
+          <form class="form-subscribe">
+            <label class="subscribe-label"
+              >Email
+              <input type="email" name="email" />
+            </label>
+          </form>
+          <button class="btn-subscribe">
+            Subscribe
+            <svg
+              width="24"
+              height="24"
+              viewBox="0 0 24 24"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <path
+                d="M24 2L0 13.25L7.66994 15.6172L19.5 6.375L10.5017 16.4913L10.509 16.4936L10.5 16.4913V22L14.8013 17.8183L20.2501 19.5L24 2Z"
+                fill="white"
+              />
+            </svg>
+          </button>
+        </div>
       </div>
     </footer>
+    <div class="mogal-overlay">
+      <div class="modal">
+        <p class="text-modal">Leave your contacts and we will call you back</p>
+        <form action="">
+          <label class="label-modal">
+            Name
+            <svg class="icons-modal" width="18" height="18">
+              <use href="./images/symbol-defs (2).svg/#icon-Vector"></use>
+            </svg>
+            <input type="name" name="name" />
+            <svg class="" width="18" height="18">
+              <use href="./images/symbol-defs (2).svg/#icon-Vector"></use>
+            </svg>
+          </label>
+          <label>
+            Phone
+            <input type="phone" name="phone" />
+          </label>
+          <label>
+            Email
+            <input type="email" name="email" />
+          </label>
+          <label
+            >Comment
+            <textarea
+              name="comment"
+              rows="5"
+              placeholder="Text input"
+            ></textarea>
+          </label>
+        </form>
+      </div>
+    </div>
   </body>
 </html>
