--- a/index.html
+++ b/index.html
@@ -442,57 +442,106 @@
           <form class="form-subscribe">
             <label class="subscribe-label"
               >Email
-              <input type="email" name="email" />
-            </label>
-          </form>
-          <button class="btn-subscribe">
-            Subscribe
-            <svg
-              width="24"
-              height="24"
-              viewBox="0 0 24 24"
-              fill="none"
-              xmlns="http://www.w3.org/2000/svg"
-            >
-              <path
-                d="M24 2L0 13.25L7.66994 15.6172L19.5 6.375L10.5017 16.4913L10.509 16.4936L10.5 16.4913V22L14.8013 17.8183L20.2501 19.5L24 2Z"
-                fill="white"
+              <input
+                class="footer-input"
+                type="email"
+                name="email"
+                placeholder="E-mail"
               />
-            </svg>
-          </button>
+            </label>
+
+            <button class="btn-subscribe">
+              Subscribe
+              <svg class="icon-footer" width="24" height="24">
+                <use href="./images/icons-2.svg/#icon-Frame-3"></use>
+              </svg>
+            </button>
+          </form>
         </div>
       </div>
     </footer>
+
     <div class="mogal-overlay">
       <div class="modal">
+        <button class="btn-modal" type="button">
+          <svg class="icon-modal" width="8" height="8">
+            <use href="./images/icons.svg#icon-instagram"></use>
+          </svg>
+        </button>
         <p class="text-modal">Leave your contacts and we will call you back</p>
         <form action="">
-          <label class="label-modal">
-            Name
-            <svg class="icons-modal" width="18" height="18">
-              <use href="./images/symbol-defs (2).svg/#icon-Vector"></use>
-            </svg>
-            <input type="name" name="name" />
-            <svg class="" width="18" height="18">
-              <use href="./images/symbol-defs (2).svg/#icon-Vector"></use>
-            </svg>
-          </label>
-          <label>
-            Phone
-            <input type="phone" name="phone" />
-          </label>
-          <label>
-            Email
-            <input type="email" name="email" />
-          </label>
-          <label
-            >Comment
+          <div class="label-modal-div">
+            <label class="label-modal" for="user-name">
+              Name
+              <div class="input-modal">
+                <input
+                  class="input-modal-com"
+                  id="user-name"
+                  type="text"
+                  name="user-name"
+                />
+                <svg class="modal-icon-name" width="18" height="24">
+                  <use href="./images/icons-2.svg#icon-close"></use>
+                </svg>
+              </div>
+            </label>
+          </div>
+
+          <div class="label-modal-div">
+            <label class="label-modal" for="user-name">
+              Phone
+              <div class="input-modal">
+                <input
+                  class="input-modal-com"
+                  id="user-name"
+                  type="text"
+                  name="user-name"
+                />
+                <svg class="modal-icon-name" width="18" height="24">
+                  <use href="./images/icons-2.svg#icon-close"></use>
+                </svg>
+              </div>
+            </label>
+          </div>
+
+          <div class="label-modal-div">
+            <label class="label-modal" for="user-name">
+              Email
+              <div class="input-modal">
+                <input
+                  class="input-modal-com"
+                  id="user-name"
+                  type="text"
+                  name="user-name"
+                />
+                <svg class="modal-icon-name" width="18" height="24">
+                  <use href="./images/icons-2.svg#icon-close"></use>
+                </svg>
+              </div>
+            </label>
+          </div>
+
+          <div class="textarea-comment">
+            <label class="label-modal" for="user-comment">Comment</label>
             <textarea
-              name="comment"
-              rows="5"
-              placeholder="Text input"
+              class="textarea-fig"
+              id="user-comment"
+              name="user-comment"
+              placeholder="Text
+            input"
             ></textarea>
-          </label>
+          </div>
+          <div class="chekbox">
+            <input
+              type="checkbox"
+              id="user-privacy"
+              value="true"
+              name="user-privacy"
+            />
+            <label for="user-privacy">
+              I accept the terms and conditions of the</label
+            >
+          </div>
         </form>
       </div>
     </div>
