--- a/index.html
+++ b/index.html
@@ -410,7 +410,7 @@
             <li class="footer-web-item">
               <a class="footer-web-link" href="">
                 <svg class="icon-web" width="24" height="24">
-                  <use href="./images/icons.svg#icon-instagram"></use>
+                  <use href="./images/icons.svg/#icon-instagram"></use>
                 </svg>
               </a>
             </li>
@@ -450,10 +450,10 @@
               />
             </label>
 
-            <button class="btn-subscribe">
+            <button class="btn-subscribe" type="submit">
               Subscribe
-              <svg class="icon-footer" width="24" height="24">
-                <use href="./images/icons-2.svg/#icon-Frame-3"></use>
+              <svg class="icon-new" width="24" height="24">
+                <use href="./images/icons.svg/#icon-Frame"></use>
               </svg>
             </button>
           </form>
@@ -461,11 +461,11 @@
       </div>
     </footer>
 
-    <div class="mogal-overlay">
+    <div class="modal-overlay">
       <div class="modal">
         <button class="btn-modal" type="button">
-          <svg class="icon-modal" width="8" height="8">
-            <use href="./images/icons.svg#icon-instagram"></use>
+          <svg class="modal-icon-name" width="8" height="8">
+            <use href="./images/icons.svg#icon-close"></use>
           </svg>
         </button>
         <p class="text-modal">Leave your contacts and we will call you back</p>
@@ -480,8 +480,8 @@
                   type="text"
                   name="user-name"
                 />
-                <svg class="modal-icon-name" width="18" height="24">
-                  <use href="./images/icons-2.svg#icon-close"></use>
+                <svg class="modal-icon-name" width="8" height="8">
+                  <use href="./images/icons.svg#icon-Vector"></use>
                 </svg>
               </div>
             </label>
@@ -498,7 +498,7 @@
                   name="user-name"
                 />
                 <svg class="modal-icon-name" width="18" height="24">
-                  <use href="./images/icons-2.svg#icon-close"></use>
+                  <use href="./images/icons-2.svg#icon-phone"></use>
                 </svg>
               </div>
             </label>
@@ -515,7 +515,7 @@
                   name="user-name"
                 />
                 <svg class="modal-icon-name" width="18" height="24">
-                  <use href="./images/icons-2.svg#icon-close"></use>
+                  <use href="./images/icons.svg/#icon-email"></use>
                 </svg>
               </div>
             </label>
@@ -538,10 +538,12 @@
               value="true"
               name="user-privacy"
             />
-            <label for="user-privacy">
-              I accept the terms and conditions of the</label
-            >
+            <label class="policy" for="user-privacy">
+              I accept the terms and conditions of the
+              <a class="link-policy">Privacy Policy</a>
+            </label>
           </div>
+          <button class="btn-send" type="button">Send</button>
         </form>
       </div>
     </div>
