--- a/index.html
+++ b/index.html
@@ -417,21 +417,21 @@
             <li class="footer-web-item">
               <a class="footer-web-link" href="">
                 <svg class="icon-web" width="24" height="24">
-                  <use href="./images/icons.svg#icon-twitter"></use>
+                  <use href="./images/icons.svg/#icon-twitter"></use>
                 </svg>
               </a>
             </li>
             <li class="footer-web-item">
               <a class="footer-web-link" href="">
                 <svg class="icon-web" width="24" height="24">
-                  <use href="./images/icons.svg#icon-facebook"></use>
+                  <use href="./images/icons.svg/#icon-facebook"></use>
                 </svg>
               </a>
             </li>
             <li class="footer-web-item">
               <a class="footer-web-link" href="">
                 <svg class="icon-web" width="24" height="24">
-                  <use href="./images/icons.svg#icon-linkedin"></use>
+                  <use href="./images/icons.svg/#icon-linkedin"></use>
                 </svg>
               </a>
             </li>
@@ -465,59 +465,49 @@
       <div class="modal">
         <button class="btn-modal" type="button">
           <svg class="modal-icon-name" width="8" height="8">
-            <use href="./images/icons.svg#icon-close"></use>
+            <use href="./images/icons.svg/#icon-close"></use>
           </svg>
         </button>
         <p class="text-modal">Leave your contacts and we will call you back</p>
-        <form action="">
+        <form>
           <div class="label-modal-div">
             <label class="label-modal" for="user-name">
               Name
-              <div class="input-modal">
-                <input
-                  class="input-modal-com"
-                  id="user-name"
-                  type="text"
-                  name="user-name"
-                />
-                <svg class="modal-icon-name" width="8" height="8">
-                  <use href="./images/icons.svg#icon-Vector"></use>
-                </svg>
-              </div>
+              <!-- <div class="input-modal"> -->
+              <input
+                class="input-modal-com"
+                id="user-name"
+                type="text"
+                name="user-name"
+              />
+              <svg class="modal-icon-name" width="8" height="8">
+                <use href="./images/icons.svg/#icon-Vector"></use>
+              </svg>
+              <!-- </div> -->
             </label>
           </div>
 
           <div class="label-modal-div">
             <label class="label-modal" for="user-name">
               Phone
-              <div class="input-modal">
-                <input
-                  class="input-modal-com"
-                  id="user-name"
-                  type="text"
-                  name="user-name"
-                />
-                <svg class="modal-icon-name" width="18" height="24">
-                  <use href="./images/icons-2.svg#icon-phone"></use>
-                </svg>
-              </div>
+              <!-- <div class="input-modal"> -->
+              <input class="input-modal-com" type="text" name="user-name" />
+              <svg class="modal-icon-name" width="18" height="24">
+                <use href="./images/icons-2.svg/#icon-antenna"></use>
+              </svg>
+              <!-- </div> -->
             </label>
           </div>
 
           <div class="label-modal-div">
             <label class="label-modal" for="user-name">
               Email
-              <div class="input-modal">
-                <input
-                  class="input-modal-com"
-                  id="user-name"
-                  type="text"
-                  name="user-name"
-                />
-                <svg class="modal-icon-name" width="18" height="24">
-                  <use href="./images/icons.svg/#icon-email"></use>
-                </svg>
-              </div>
+              <!-- <div class="input-modal"> -->
+              <input class="input-modal-com" type="text" name="user-name" />
+              <svg class="modal-icon-name" width="18" height="24">
+                <use href="./images/icons.svg/#icon-antenna"></use>
+              </svg>
+              <!-- </div> -->
             </label>
           </div>
 
