--- a/index.html
+++ b/index.html
@@ -410,28 +410,28 @@
             <li class="footer-web-item">
               <a class="footer-web-link" href="">
                 <svg class="icon-web" width="24" height="24">
-                  <use href="./images/icons.svg/#icon-instagram"></use>
+                  <use href="./images/icons.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
             <li class="footer-web-item">
               <a class="footer-web-link" href="">
                 <svg class="icon-web" width="24" height="24">
-                  <use href="./images/icons.svg/#icon-twitter"></use>
+                  <use href="./images/icons.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
             <li class="footer-web-item">
               <a class="footer-web-link" href="">
                 <svg class="icon-web" width="24" height="24">
-                  <use href="./images/icons.svg/#icon-facebook"></use>
+                  <use href="./images/icons.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
             <li class="footer-web-item">
               <a class="footer-web-link" href="">
                 <svg class="icon-web" width="24" height="24">
-                  <use href="./images/icons.svg/#icon-linkedin"></use>
+                  <use href="./images/icons.svg#icon-linkedin"></use>
                 </svg>
               </a>
             </li>
@@ -453,7 +453,7 @@
             <button class="btn-subscribe" type="submit">
               Subscribe
               <svg class="icon-new" width="24" height="24">
-                <use href="./images/icons.svg/#icon-Frame"></use>
+                <use href="./images/icons.svg#icon-Frame"></use>
               </svg>
             </button>
           </form>
@@ -465,7 +465,7 @@
       <div class="modal">
         <button class="btn-modal" type="button">
           <svg class="modal-icon-name" width="8" height="8">
-            <use href="./images/icons.svg/#icon-close"></use>
+            <use href="./images/icons.svg#icon-close"></use>
           </svg>
         </button>
         <p class="text-modal">Leave your contacts and we will call you back</p>
@@ -481,7 +481,7 @@
                 name="user-name"
               />
               <svg class="modal-icon-name" width="8" height="8">
-                <use href="./images/icons.svg/#icon-Vector"></use>
+                <use href="./images/icons.svg#icon-Vector"></use>
               </svg>
               <!-- </div> -->
             </label>
@@ -493,7 +493,7 @@
               <!-- <div class="input-modal"> -->
               <input class="input-modal-com" type="text" name="user-name" />
               <svg class="modal-icon-name" width="18" height="24">
-                <use href="./images/icons-2.svg/#icon-antenna"></use>
+                <use href="./images/icons-2.svg#icon-antenna"></use>
               </svg>
               <!-- </div> -->
             </label>
@@ -505,7 +505,7 @@
               <!-- <div class="input-modal"> -->
               <input class="input-modal-com" type="text" name="user-name" />
               <svg class="modal-icon-name" width="18" height="24">
-                <use href="./images/icons.svg/#icon-antenna"></use>
+                <use href="./images/icons.svg#icon-antenna"></use>
               </svg>
               <!-- </div> -->
             </label>
