--- a/index.html
+++ b/index.html
@@ -453,7 +453,7 @@
             <button class="btn-subscribe" type="submit">
               Subscribe
               <svg class="icon-new" width="24" height="24">
-                <use href="./images/icons.svg#icon-Frame"></use>
+                <use href="./images/icons.svg#icon-astronaut"></use>
               </svg>
             </button>
           </form>
@@ -481,7 +481,7 @@
                 name="user-name"
               />
               <svg class="modal-icon-name" width="8" height="8">
-                <use href="./images/icons.svg#icon-Vector"></use>
+                <use href="./images/icons.svg#icon-astronaut"></use>
               </svg>
               <!-- </div> -->
             </label>
@@ -491,9 +491,14 @@
             <label class="label-modal" for="user-name">
               Phone
               <!-- <div class="input-modal"> -->
-              <input class="input-modal-com" type="text" name="user-name" />
+              <input
+                class="input-modal-com"
+                type="text"
+                name="user-name"
+                id="user-name"
+              />
               <svg class="modal-icon-name" width="18" height="24">
-                <use href="./images/icons-2.svg#icon-antenna"></use>
+                <use href="./images/icons.svg#icon-astronaut"></use>
               </svg>
               <!-- </div> -->
             </label>
@@ -503,7 +508,12 @@
             <label class="label-modal" for="user-name">
               Email
               <!-- <div class="input-modal"> -->
-              <input class="input-modal-com" type="text" name="user-name" />
+              <input
+                class="input-modal-com"
+                type="text"
+                name="user-name"
+                id="user-name"
+              />
               <svg class="modal-icon-name" width="18" height="24">
                 <use href="./images/icons.svg#icon-antenna"></use>
               </svg>
