--- a/index.html
+++ b/index.html
@@ -473,51 +473,46 @@
           <div class="label-modal-div">
             <label class="label-modal" for="user-name">
               Name
-              <!-- <div class="input-modal"> -->
-              <input
-                class="input-modal-com"
-                id="user-name"
-                type="text"
-                name="user-name"
-              />
-              <svg class="modal-icon-name" width="8" height="8">
-                <use href="./images/icons.svg#icon-astronaut"></use>
-              </svg>
-              <!-- </div> -->
+              <div class="input-modal">
+                <input class="input-modal-com" id="user-name" type="text" />
+                <svg class="modal-icon-name" width="8" height="8">
+                  <use href="./images/icons.svg#icon-astronaut"></use>
+                </svg>
+              </div>
             </label>
           </div>
 
           <div class="label-modal-div">
             <label class="label-modal" for="user-name">
               Phone
-              <!-- <div class="input-modal"> -->
-              <input
-                class="input-modal-com"
-                type="text"
-                name="user-name"
-                id="user-name"
-              />
-              <svg class="modal-icon-name" width="18" height="24">
-                <use href="./images/icons.svg#icon-astronaut"></use>
-              </svg>
-              <!-- </div> -->
+              <div class="input-modal">
+                <input
+                  class="input-modal-com"
+                  type="text"
+                  name="user-name"
+                  id="user-name-2"
+                />
+                <svg class="modal-icon-name" width="18" height="24">
+                  <use href="./images/icons.svg#icon-astronaut"></use>
+                </svg>
+              </div>
             </label>
           </div>
 
           <div class="label-modal-div">
             <label class="label-modal" for="user-name">
               Email
-              <!-- <div class="input-modal"> -->
-              <input
-                class="input-modal-com"
-                type="text"
-                name="user-name"
-                id="user-name"
-              />
-              <svg class="modal-icon-name" width="18" height="24">
-                <use href="./images/icons.svg#icon-antenna"></use>
-              </svg>
-              <!-- </div> -->
+              <div class="input-modal">
+                <input
+                  class="input-modal-com"
+                  type="text"
+                  name="user-name"
+                  id="user-name-1"
+                />
+                <svg class="modal-icon-name" width="18" height="24">
+                  <use href="./images/icons.svg#icon-antenna"></use>
+                </svg>
+              </div>
             </label>
           </div>
 
