--- a/index.html
+++ b/index.html
@@ -483,37 +483,33 @@
           </div>
 
           <div class="label-modal-div">
-            <label class="label-modal" for="user-name">
-              Phone
-              <div class="input-modal">
-                <input
-                  class="input-modal-com"
-                  type="text"
-                  name="user-name"
-                  id="user-name-2"
-                />
-                <svg class="modal-icon-name" width="18" height="24">
-                  <use href="./images/icons.svg#icon-astronaut"></use>
-                </svg>
-              </div>
-            </label>
+            <label class="label-modal" for="user-name"> Phone</label>
+            <div class="input-modal">
+              <input
+                class="input-modal-com"
+                type="text"
+                name="user-name"
+                id="user-name-2"
+              />
+              <svg class="modal-icon-name" width="18" height="24">
+                <use href="./images/icons.svg#icon-astronaut"></use>
+              </svg>
+            </div>
           </div>
 
           <div class="label-modal-div">
-            <label class="label-modal" for="user-name">
-              Email
-              <div class="input-modal">
-                <input
-                  class="input-modal-com"
-                  type="text"
-                  name="user-name"
-                  id="user-name-1"
-                />
-                <svg class="modal-icon-name" width="18" height="24">
-                  <use href="./images/icons.svg#icon-antenna"></use>
-                </svg>
-              </div>
-            </label>
+            <label class="label-modal" for="user-name"> Email</label>
+            <div class="input-modal">
+              <input
+                class="input-modal-com"
+                type="text"
+                name="user-name"
+                id="user-name-1"
+              />
+              <svg class="modal-icon-name" width="18" height="24">
+                <use href="./images/icons.svg#icon-antenna"></use>
+              </svg>
+            </div>
           </div>
 
           <div class="textarea-comment">
