--- a/index.html
+++ b/index.html
@@ -453,7 +453,7 @@
             <button class="btn-subscribe" type="submit">
               Subscribe
               <svg class="icon-new" width="24" height="24">
-                <use href="./images/icons.svg#icon-astronaut"></use>
+                <use href="./images/icons.svg#icon-Frame"></use>
               </svg>
             </button>
           </form>
@@ -471,15 +471,13 @@
         <p class="text-modal">Leave your contacts and we will call you back</p>
         <form>
           <div class="label-modal-div">
-            <label class="label-modal" for="user-name">
-              Name
-              <div class="input-modal">
-                <input class="input-modal-com" id="user-name" type="text" />
-                <svg class="modal-icon-name" width="8" height="8">
-                  <use href="./images/icons.svg#icon-astronaut"></use>
-                </svg>
-              </div>
-            </label>
+            <label class="label-modal" for="user-name"> Name</label>
+            <div class="input-modal">
+              <input class="input-modal-com" id="user-name" type="text" />
+              <svg class="modal-icon-name" width="8" height="8">
+                <use href="./images/icons.svg#icon-Vector"></use>
+              </svg>
+            </div>
           </div>
 
           <div class="label-modal-div">
@@ -492,7 +490,7 @@
                 id="user-name-2"
               />
               <svg class="modal-icon-name" width="18" height="24">
-                <use href="./images/icons.svg#icon-astronaut"></use>
+                <use href="./images/icons.svg#icon-phone"></use>
               </svg>
             </div>
           </div>
@@ -507,7 +505,7 @@
                 id="user-name-1"
               />
               <svg class="modal-icon-name" width="18" height="24">
-                <use href="./images/icons.svg#icon-antenna"></use>
+                <use href="./images/icons.svg#icon-email"></use>
               </svg>
             </div>
           </div>
