--- a/index.html
+++ b/index.html
@@ -473,8 +473,13 @@
           <div class="label-modal-div">
             <label class="label-modal" for="user-name"> Name</label>
             <div class="input-modal">
-              <input class="input-modal-com" id="user-name" type="text" />
-              <svg class="modal-icon-name" width="8" height="8">
+              <input
+                class="input-modal-com"
+                id="user-name"
+                type="text"
+                name="user-name"
+              />
+              <svg class="modal-icon-name" width="18" height="24">
                 <use href="./images/icons.svg#icon-Vector"></use>
               </svg>
             </div>
@@ -516,12 +521,12 @@
               class="textarea-fig"
               id="user-comment"
               name="user-comment"
-              placeholder="Text
-            input"
+              placeholder="Text input"
             ></textarea>
           </div>
           <div class="chekbox">
             <input
+              class="visually-hidden"
               type="checkbox"
               id="user-privacy"
               value="true"
@@ -529,7 +534,12 @@
             />
             <label class="policy" for="user-privacy">
               I accept the terms and conditions of the
-              <a class="link-policy">Privacy Policy</a>
+              <span class="policy-span">
+                <svg class="modal-icon-name" width="18" height="24">
+                  <use href="./images/icons.svg#icon-click"></use>
+                </svg>
+                <a class="link-policy">Privacy Policy</a></span
+              >
             </label>
           </div>
           <button class="btn-send" type="button">Send</button>
