--- a/index.html
+++ b/index.html
@@ -525,17 +525,18 @@
             ></textarea>
           </div>
           <div class="chekbox">
-            <input
-              class="visually-hidden"
-              type="checkbox"
-              id="user-privacy"
-              value="true"
-              name="user-privacy"
-            />
             <label class="policy" for="user-privacy">
+              <input
+                class="policy-input"
+                class="visually-hidden"
+                type="checkbox"
+                id="user-privacy"
+                value="true"
+                name="user-privacy"
+              />
               I accept the terms and conditions of the
               <span class="policy-span">
-                <svg class="modal-icon-name" width="18" height="24">
+                <svg class="modal-icon-span" width="10" height="8">
                   <use href="./images/icons.svg#icon-click"></use>
                 </svg>
                 <a class="link-policy">Privacy Policy</a></span
