--- a/index.html
+++ b/index.html
@@ -526,8 +526,7 @@
           </div>
           <div class="chekbox">
             <input
-              class="policy-input"
-              class="visually-hidden"
+              class="policy-input visually-hidden"
               type="checkbox"
               id="user-privacy"
               value="true"
