--- a/index.html
+++ b/index.html
@@ -464,7 +464,7 @@
     <div class="modal-overlay">
       <div class="modal">
         <button class="btn-modal" type="button">
-          <svg class="modal-icon-name" width="8" height="8">
+          <svg class="modal-icon-name" width="24" height="24">
             <use href="./images/icons.svg#icon-close"></use>
           </svg>
         </button>
@@ -538,8 +538,8 @@
                 <svg class="modal-icon-span" width="10" height="8">
                   <use href="./images/icons.svg#icon-click"></use>
                 </svg>
-                <a class="link-policy">Privacy Policy</a></span
-              >
+              </span>
+              <a class="link-policy">Privacy Policy</a>
             </label>
           </div>
           <button class="btn-send" type="button">Send</button>
