--- a/index.html
+++ b/index.html
@@ -465,7 +465,7 @@
       <div class="modal">
         <button class="btn-modal" type="button">
           <svg class="modal-icon-name" width="8" height="8">
-            <use href="./images/icons.svg#icon-close"></use>
+            <use href="./images/icons.svg#icon-close-new"></use>
           </svg>
         </button>
         <p class="text-modal">Leave your contacts and we will call you back</p>
@@ -480,7 +480,7 @@
                 name="user-name"
               />
               <svg class="modal-icon-name" width="18" height="24">
-                <use href="./images/icons.svg#icon-Vector"></use>
+                <use href="./images/icons.svg#icon-person-new"></use>
               </svg>
             </div>
           </div>
@@ -532,13 +532,14 @@
               value="true"
               name="user-privacy"
             />
-            <label class="policy" for="user-privacy">
-              I accept the terms and conditions of the
-              <span class="policy-span">
-                <svg class="modal-icon-span" width="10" height="8">
-                  <use href="./images/icons.svg#icon-click"></use>
-                </svg>
-              </span>
+            <label class="policy" for="user-privacy"
+              >I accept the terms and conditions of the
+              <svg class="modal-icon-span" width="10" height="8">
+                <use href="./images/icons.svg#icon-galochka"></use>
+              </svg>
+
+              <span class="policy-span"> </span>
+
               <a class="link-policy">Privacy Policy</a>
             </label>
           </div>
