--- a/index.html
+++ b/index.html
@@ -464,7 +464,7 @@
     <div class="modal-overlay">
       <div class="modal">
         <button class="btn-modal" type="button">
-          <svg class="modal-icon-name" width="8" height="8">
+          <svg class="" width="8" height="8">
             <use href="./images/icons.svg#icon-close-new"></use>
           </svg>
         </button>
