--- a/index.html
+++ b/index.html
@@ -525,6 +525,9 @@
           </div>
           <div class="chekbox">
             <label class="policy" for="user-privacy">
+              <svg class="modal-icon-span" width="10" height="8">
+                <use href="./images/icons.svg#icon-galochka"></use>
+              </svg>
               <input
                 class="policy-input visually-hidden"
                 type="checkbox"
@@ -532,13 +535,12 @@
                 value="true"
                 name="user-privacy"
               />
-              <svg class="modal-icon-span" width="10" height="8">
-                <use href="./images/icons.svg#icon-galochka"></use>
-              </svg>
+              <span class="policy-span"> </span>
               I accept the terms and conditions of the
               <a class="link-policy">Privacy Policy</a>
-
-              <span class="policy-span"> </span>
+              <!-- <svg class="modal-icon-span" width="10" height="8">
+                <use href="./images/icons.svg#icon-galochka"></use>
+              </svg> -->
             </label>
           </div>
           <button class="btn-send" type="button">Send</button>
