--- a/index.html
+++ b/index.html
@@ -532,13 +532,11 @@
               name="user-privacy"
             />
             <label class="policy" for="user-privacy">
-              I accept the terms and conditions of the
-
               <span class="policy-span">
                 <svg class="modal-icon-span" width="10" height="8">
                   <use href="./images/icons.svg#icon-galochka"></use>
-                </svg>
-              </span>
+                </svg> </span
+              >I accept the terms and conditions of the
 
               <a class="link-policy">Privacy Policy</a>
             </label>
